attendance timeinpm button visible even though it's already past 6 oclock fixed, checkbox in report-main replaced with images(png)

--- a/includes/css/reports-main.css
+++ b/includes/css/reports-main.css
@@ -58,3 +58,8 @@ a
   width: 20px;
   height: 20px;
 }
+.chckbx
+{
+  width: 20px;
+  height: 20px;
+}
